added sessions to app

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %} {% block content %}
-
-<a href="/questions/0"><button>Start Survey</button></a>
+<form action="/questions/0" method="post"><button>Start Survey</button></form>
 
 {% endblock %}
